@@ -63,3 +63,4 @@ New internal features:
   unless you explicitly install CPSSharedCalendar with installProduct in your
   test.
 - Change the default profile to use a CPS User Folder and CPS ZODB Directories
+- Add default roles in the VariousImporter class
